@@ -1,5 +1,9 @@
 2005-05-09  Derek Price  <derek@ximbiot.com>
 
+	* history.c (history_write): Add FIXME.
+
+2005-05-09  Derek Price  <derek@ximbiot.com>
+
 	* hash.c (removenode, mergelists): New function.
 	(delnode): Use removenode.
 	* hash.h (mergelists): New proto.
